--- a/tests/all.html
+++ b/tests/all.html
@@ -12,9 +12,16 @@
 
     <script>
         QUnit.testSuites([
+            { name: "jQuery 1.11.2", path: "index.html?jquery=1.11.2" },
+            { name: "jQuery 1.10.2", path: "index.html?jquery=1.10.2" },
+            { name: "jQuery 1.10.0", path: "index.html?jquery=1.10.0" },
             { name: "jQuery 1.9.1", path: "index.html?jquery=1.9.1" },
             { name: "jQuery 1.8.3", path: "index.html?jquery=1.8.3" },
-            { name: "jQuery 1.8.3", path: "index.html?jquery=1.7.2" }
+            { name: "jQuery 1.7.2", path: "index.html?jquery=1.7.2" },
+            { name: "jQuery 2.1.3", path: "index.html?jquery=2.1.3" },
+            { name: "jQuery 2.1.0", path: "index.html?jquery=2.1.0" },
+            { name: "jQuery 2.0.3", path: "index.html?jquery=2.0.3" },
+            { name: "jQuery 2.0.0", path: "index.html?jquery=2.0.0" }
         ]);
     </script>
 </head>
